change project structure

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,10 +1,7 @@
-plugins:
-  debate_enabled:
-    default: true
-  debate_allow_change:
-    default: true
-  debate_allow_anonymous:
-    default: true
-  debate_enabled_categories:
-    type: category_list
-    default: ""
+debate_enabled:
+  default: true
+  client: true
+
+debate_enabled_categories:
+  type: category_list
+  default: ""
