--- a/config/settings.yml
+++ b/config/settings.yml
@@ -2,3 +2,9 @@ plugins:
   discourse_debates_enabled:
     default: false
     client: true
+  discourse_debates_suggestion_min_votes:
+    default: 10
+    client: true
+    type: integer
+    min: 1
+    max: 100
